feat: complete M9 closure, M10 dashboard indicators, and event listeners with SonarQube fixes